fix we validation errors

--- a/jekyll/_layouts/home.html
+++ b/jekyll/_layouts/home.html
@@ -5,8 +5,8 @@ layout: default
 <div class="container">
     <div class="text-left">
         <h2>
-            <p>To explore the Knowledge Base, click a Language icon above. You may also read the article below, which is one
-                of the inspirations for this web site.</p>
+            To explore the Knowledge Base, click a Language icon above. You may also read the article below, which is one
+                of the inspirations for this web site.
         </h2>
         <p>The original source of the article is at
             <a href="http://www.ohchr.org/EN/NewsEvents/Pages/DisplayNews.aspx?NewsID=21689&LangID=E">http://www.ohchr.org/EN/NewsEvents/Pages/DisplayNews.aspx?NewsID=21689&LangID=E</a>
@@ -15,8 +15,8 @@ layout: default
 
         <h1>World needs “revolution” in mental health care – UN rights expert</h1>
 
-        <span id="ctl00_PlaceHolderMain_DisplayNewsID_lblNewsFullText" class="lblnewsfulltext" style="display:inline-block;width:100%;">
-            <div class="ExternalClass4C9C8280F0EA4A2C9B9780FDF91D4465">
+        <div class="ExternalClass4C9C8280F0EA4A2C9B9780FDF91D4465"></div>
+            <span id="ctl00_PlaceHolderMain_DisplayNewsID_lblNewsFullText" class="lblnewsfulltext" style="display:inline-block;width:100%;">
                 <p>GENEVA (6 June 2017) – The United Nations Special Rapporteur on the right to health, Dainius Pūras, has called
                     for a sea change in mental health care around the world, urging States and psychiatrists to act with
                     courage to reform a crisis-hit system built on outdated attitudes. </p>
@@ -86,7 +86,7 @@ layout: default
                     <strong> STAND UP for someone’s rights today. &nbsp;</strong>#Standup4humanrights and visit the web page at
                     <a href="http://www.standup4humanrights.org/">http://www.standup4humanrights.org</a>
                 </p>
-            </div>
-        </span>
+            </span>
+        </div>
     </div>
 </div>
