--- a/jekyll/_includes/header.html
+++ b/jekyll/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="site-header" role="banner">
+<header class="site-header">
   
     <div class="container">
         <div class="text-center">
