remove extra tag

--- a/jekyll/_includes/post_display.html
+++ b/jekyll/_includes/post_display.html
@@ -7,7 +7,7 @@
             <p><a href="{{ post.href }}">{{ post.title }}</a></p>
 
             {% for tag in post.tags %}
-                <a class="tag label label-danger" <a href="{{ site.url }}/{{ site.tag_page_dir }}/{{ tag | slugify: 'pretty' }}/">{{ tag }}</a>
+                <a class="tag label label-danger" href="{{ site.url }}/{{ site.tag_page_dir }}/{{ tag | slugify: 'pretty' }}/">{{ tag }}</a>
             {% endfor %}
         </div>
     </div>
