--- a/jekyll/_includes/footer.html
+++ b/jekyll/_includes/footer.html
@@ -16,6 +16,14 @@
             <li><a href="https://drive.google.com/open?id=1pXgH6xgNmisJO5WEYI5VidLCh719dDgQo7yb3UlnW5c">Report a problem with a link</a></li>
         </ul>
     </div>
+    <div class="container">
+        <h3>Acknowledgements</h3>
+        <ul>
+            <li><a href="http://getbootstrap.com/">Bootstrap</a></li>
+            <li><a href="https://jekyllrb.com/">Jekyll</a></li>
+            <li><a href="http://up-for-grabs.net/">Up-For-Grabs</a></li>
+        </ul>
+    </div>
 
   <!-- jQuery CDN -->
   <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
