put link back where it belongs
Oops again.. that was me!

--- a/jekyll/_includes/footer.html
+++ b/jekyll/_includes/footer.html
@@ -19,6 +19,7 @@
     <div class="container">
         <h3>Acknowledgements</h3>
         <ul>
+            <li><a href="https://github.com/mhwkb/mhwkb.github.io/blob/master/CONTRIBUTORS.md">mhwKB project contributors</a></li>
             <li><a href="http://getbootstrap.com/">Bootstrap</a></li>
             <li><a href="https://jekyllrb.com/">Jekyll</a></li>
             <li><a href="http://up-for-grabs.net/">Up-For-Grabs</a></li>
