--- a/jekyll/_includes/footer.html
+++ b/jekyll/_includes/footer.html
@@ -23,6 +23,7 @@
             <li><a href="http://getbootstrap.com/">Bootstrap</a></li>
             <li><a href="https://jekyllrb.com/">Jekyll</a></li>
             <li><a href="http://up-for-grabs.net/">Up-For-Grabs</a></li>
+            <li><a href="https://pages.github.com/">Github Pages</a></li>
         </ul>
     </div>
 
