--- a/jekyll/_includes/post_display.html
+++ b/jekyll/_includes/post_display.html
@@ -4,10 +4,10 @@
             {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
             <p><span class="post-meta">{{ post.date | date: date_format }}</span></p>
 
-            <p><a href="{{ post.href }}">{{ post.title }}</a></p>
+            <p><a style="font-size: 22px" href="{{ post.href }}">{{ post.title }}</a></p>
 
             {% for tag in post.tags %}
-                <a class="tag label label-danger" href="{{ site.url }}/{{ site.tag_page_dir }}/{{ tag | slugify: 'pretty' }}/">{{ tag }}</a>
+                <a style="font-size: 15px" class="tag label label-success" href="{{ site.url }}/{{ site.tag_page_dir }}/{{ tag | slugify: 'pretty' }}/">{{ tag }}</a>
             {% endfor %}
         </div>
     </div>
