style.css added to jekyll dir and reference put in head.html

--- a/jekyll/_includes/head.html
+++ b/jekyll/_includes/head.html
@@ -22,4 +22,6 @@
     {% if site.tags != "" %}
       {% include collecttags.html %}
     {% endif %}
+    <!-- style.css reference   -->
+    <link rel="stylesheet" href="{{ site.url }}/assets/css/style.css">
 </head>
