--- a/jekyll/_includes/post_display.html
+++ b/jekyll/_includes/post_display.html
@@ -1,14 +1,12 @@
 <div class="panel panel-primary">
-    <div class="panel-body">
-        <div class="article-bottom">
-            {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
-            <p><span class="post-meta">{{ post.date | date: date_format }}</span></p>
+	<div class="panel-heading">
+            <p style="margin-top: 0; margin-bottom: 0;"><a style="font-size: 22px; color: white;" href="{{ post.href }}">{{ post.title }}</a></p>
+    </div>
 
-            <p><a style="font-size: 22px" href="{{ post.href }}">{{ post.title }}</a></p>
+    <div class="panel-body">
 
             {% for tag in post.tags %}
-                <a style="font-size: 15px" class="tag label label-success" href="{{ site.url }}/{{ site.tag_page_dir }}/{{ tag | slugify: 'pretty' }}/">{{ tag }}</a>
+                <a id="tag" style="margin-top: 0; margin-bottom: 0; font-size: 15px;" class="tag" href="{{ site.url }}/{{ site.tag_page_dir }}/{{ tag | slugify: 'pretty' }}/">{{ tag }}</a>
             {% endfor %}
-        </div>
     </div>
 </div>
