--- a/jekyll/assets/css/style.css
+++ b/jekyll/assets/css/style.css
@@ -103,7 +103,7 @@ h1 img, h2 img, h3 img, h4 img, h5 img, h6 img {
 
 	
 .tag {
-  background: #739900;
+  background: #ffd966;
   border-radius: 3px 0 0 3px;
   color: #333333;
   display: inline-block;
@@ -117,7 +117,7 @@ h1 img, h2 img, h3 img, h4 img, h5 img, h6 img {
 }
 
 .tag::before {
-  background: #fff;
+  background: #d9d9d9;
   border-radius: 10px;
   box-shadow: inset 0 1px rgba(0, 0, 0, 0.25);
   content: '';
@@ -129,9 +129,9 @@ h1 img, h2 img, h3 img, h4 img, h5 img, h6 img {
 }
 
 .tag::after {
-  background: #fff;
+  background: #d9d9d9;
   border-bottom: 13px solid transparent;
-  border-left: 10px solid #739900;
+  border-left: 10px solid #ffd966;
   border-top: 13px solid transparent;
   content: '';
   position: absolute;
