--- a/jekyll/assets/css/style.css
+++ b/jekyll/assets/css/style.css
@@ -140,7 +140,7 @@ h1 img, h2 img, h3 img, h4 img, h5 img, h6 img {
 }
 
 .tag:hover {
-  background-color: crimson;
+  background-color: #232c47;
   color: white;
 }
 
