updating web site

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,32 @@ a img {
 	margin: 0;
 }
 
+.plaintext {
+	font-size: 18px;
+	font-family: arial;
+}
+
+.plaintext a:link {
+	color: #232c47;
+	border-style: solid;
+	border-color: #aeaeae;
+	border-width: 0px 0px 4px 0px;
+}
+
+.plaintext a:link:hover {
+	color: #232c47;
+	border-color: #aeaeae;
+	border-width: 4px 0px 0px 0px;
+}
+
+.box600 {
+	width: 1000px;
+	border: 1px solid black;
+	position: relative;
+	left: 50%;
+	margin-left: -500px;
+	padding: 10px;
+}
 
 /*********************************************
 	Constrain table and input widths
@@ -46,6 +72,7 @@ table, input, textarea, select {
 *********************************************/
 body {
 	background: #FFFFFF;
+	background-image: url("/images/mhwkb_bg_96x96_03.gif");
 }
 
 /*********************************************
@@ -53,7 +80,7 @@ body {
 *********************************************/
 
 a {
-	color: #990000;
+	color: #232c47;
 	-webkit-transition: all .1s ease-in;
 	-moz-transition: all .1s ease-in;
 	-o-transition: all .1s ease-in;
@@ -101,7 +128,7 @@ h1 img, h2 img, h3 img, h4 img, h5 img, h6 img {
 	margin: 0;
 }
 
-	
+
 .tag {
   background: #ffd966;
   border-radius: 3px 0 0 3px;
@@ -145,7 +172,7 @@ h1 img, h2 img, h3 img, h4 img, h5 img, h6 img {
 }
 
 .tag:hover::after {
-   border-left-color: crimson; 
+   border-left-color: crimson;
 }
 
 
