setup pagination trail

--- a/jekyll/_layouts/category_index.html
+++ b/jekyll/_layouts/category_index.html
@@ -8,24 +8,23 @@ layout: default
         {% for post in paginator.posts %}
             {% include post_display.html %}
         {% endfor %}
-        <!-- {% for post in site.categories[page.category] %}
-            {% include post_display.html %}
-        {% endfor %} -->
 
-        {% if paginator.total_pages > 1 %}
-        <ul class="pager">
-            {% if paginator.previous_page %}
-            <li class="previous">
-                <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' | replace: 'index.html', '' }}">&larr; Newer Posts</a>
-            </li>
-            {% endif %}
-            {% if paginator.next_page %}
-            <li class="next">
-                <a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' | replace: 'index.html', '' }}">Older Posts &rarr;</a>
-            </li>
-            {% endif %}
-        </ul>
-      {% endif %}
-
+        {% if paginator.page_trail %}
+            <nav aria-label="...">
+                <ul class="pagination">
+                    <li {% if page.url == paginator.first_page_path %}class="page-item disabled"{% else %}class="page-item"{% endif %}>
+                        <a class="page-link" href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' | replace: 'index.html', '' }}">Previous</a>
+                    </li>
+                    {% for trail in paginator.page_trail %}
+                    <li {% if page.url == trail.path %}class="page-item active"{% else %}class="page-item"{% endif %}>
+                        <a class="page-link" href="{{ trail.path | prepend: site.baseurl | replace: '//', '/' | replace: 'index.html', '' }}" title="{{trail.title}}">{{ trail.num }}</a>
+                    </li>
+                    {% endfor %}
+                    <li {% if page.url == paginator.last_page_path %}class="page-item disabled"{% else %}class="page-item"{% endif %}class="page-item">
+                        <a class="page-link" href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' | replace: 'index.html', '' }}">Next</a>                            
+                    </li>
+                </ul>
+            </nav>
+        {% endif %}
     </div>
 </div>
