--- a/jekyll/_includes/footer.html
+++ b/jekyll/_includes/footer.html
@@ -36,9 +36,10 @@
   <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
   <!-- jQuery local fallback -->
   <script>
-    window.jQuery || document.write('<script src="/assest/js/jquery.min.js"><\/script>')
+    window.jQuery || document.write('<script src="/assets/js/jquery.min.js"><\/script>')
   </script>
-
+  <!-- Latest compiled and minified Bootstrap JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   <!-- Bootstrap local fallback -->
   <div id="bootstrapCssTest" class="hidden"></div>
   <script>
