--- a/jekyll/_includes/post_display.html
+++ b/jekyll/_includes/post_display.html
@@ -1,12 +1,19 @@
 <div class="panel panel-primary">
 	<div class="panel-heading" style="background-color: #4040bf;">
-        <p style="margin-top: 0; margin-bottom: 0;">
-            <a style="font-size: 22px; color: white;" href="{{ post.href }}">{{ post.title }}</a>
-        </p>
-    </div>
-    <div class="panel-body" style="background-color: #d9d9d9;">
-        {% for tag in post.tags %}
-            <b><a id="tag" style="margin-top: 0; margin-bottom: 0; font-size: 15px;" class="tag" href="{{ site.url }}/{{ site.tag_page_dir }}/{{ tag | slugify: 'pretty' }}/">{{ tag }}</a></b>
-        {% endfor %}
-    </div>
+		<div class="row">
+			<p style="margin-top: 0; margin-bottom: 0; display: inline;">
+				<a style="font-size: 22px; color: white;" href="{{ post.href }}">{{ post.title }}</a>
+			</p>
+			<div class="dropdown pull-right">
+				<div class="btn-group">
+					<button type="button" class="btn btn-default dropdown-toggle" style="margin-top: -3px; margin-bottom: -3px; margin-right: 15px;" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Tags <span class="caret"></span></button>
+					<ul class="dropdown-menu pull-left">
+						{% for tag in post.tags %}
+						<li><a href="{{ site.url }}/{{ site.tag_page_dir }}/{{ tag | slugify: 'pretty' }}/">{{ tag }}</a></li>
+						{% endfor %}
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
