--- a/jekyll/assets/css/style.css
+++ b/jekyll/assets/css/style.css
@@ -179,3 +179,7 @@ h1 img, h2 img, h3 img, h4 img, h5 img, h6 img {
 #tag:hover {
 	text-decoration: none;
 }
+
+.dropdown{
+    display: inline;
+}
