--- a/jekyll/_includes/header.html
+++ b/jekyll/_includes/header.html
@@ -2,6 +2,7 @@
     <div class="container">
         <div class="text-left">
             <h1><img src="{{ site.url }}/images/mhwkb_dharma_wheel_logo_180x170.png" alt="mhwKB wheel of Dharma logo" width="180" height="170">Mental Health and Wellness Knowledge Base</h1>
+            {% include category_display.html %}
         </div>
     </div>
 </header>
