changes made to footer btns

--- a/jekyll/_includes/footer.html
+++ b/jekyll/_includes/footer.html
@@ -1,9 +1,9 @@
 <footer class="site-footer">
   <div class="container">
     <div class="text-center">
-      <a class="btn btn-danger" href="{{ site.url }}"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Back Home</a>
-      <a class="btn btn-danger" href="https://github.com/mhwkb/mhwkb.github.io#mhwkb"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> About</a>
-      <a class="btn btn-danger" href="{{ site.url }}/feed.xml"><i class="fa fa-rss"></i> RSS</a>
+      <a class="btn btn-custom" href="{{ site.url }}"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home</a>
+      <a class="btn btn-custom" href="https://github.com/mhwkb/mhwkb.github.io#mhwkb"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> About</a>
+      <a class="btn btn-custom" href="{{ site.url }}/feed.xml"><i class="fa fa-rss"></i> RSS</a>
       <br /><br/>
     </div>
   </div>
