--- a/jekyll/_includes/header.html
+++ b/jekyll/_includes/header.html
@@ -1,6 +1,14 @@
 <header class="site-header">
+  <div class="container">
+    <div class="text-center">
+      <a class="btn btn-custom" href="{{ site.url }}"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home</a>
+      <a class="btn btn-custom" href="https://github.com/mhwkb/mhwkb.github.io#mhwkb"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> About</a>
+      <a class="btn btn-custom" href="{{ site.url }}/feed.xml"><i class="fa fa-rss"></i> RSS</a>
+      <br /><br/>
+    </div>
+  </div>
     <div class="container">
-        <div class="text-left">
+        <div class="text-center">
             <h1><img src="{{ site.url }}/images/mhwkb_dharma_wheel_logo_180x170.png" alt="mhwKB wheel of Dharma logo" width="180" height="170">Mental Health Knowledge Base</h1>
             {% include category_display.html %}
         </div>
