--- a/jekyll/assets/css/style.css
+++ b/jekyll/assets/css/style.css
@@ -189,3 +189,10 @@ h1 img, h2 img, h3 img, h4 img, h5 img, h6 img {
 .dropdown{
     display: inline;
 }
+.btn-custom {
+	color: #ffffff;
+	background: #232c47;
+}
+.btn-custom:hover, .btn-custom:focus, .btn-custom:active, .btn-custom.active, .open > .dropdown-toggle.btn-custom {
+    background: #67717a;
+}
