--- a/jekyll/_layouts/post.html
+++ b/jekyll/_layouts/post.html
@@ -3,6 +3,7 @@ layout: default
 ---
 <div class="container">
     <div class="text-center">
-        {% include post_page_display.html %}
+        {% assign post = page %}
+        {% include post_display.html %}
     </div>
 </div>
