--- a/jekyll/assets/css/style.css
+++ b/jekyll/assets/css/style.css
@@ -41,8 +41,10 @@ a img {
 
 .plaintext a:link:hover {
 	color: #232c47;
+	border-style: solid;
 	border-color: #aeaeae;
-	border-width: 4px 0px 0px 0px;
+	border-width: 4px 0px 4px 0px;
+	text-decoration: none;
 }
 
 .box600 {
