home.html: moved link back to top

--- a/jekyll/_layouts/home.html
+++ b/jekyll/_layouts/home.html
@@ -8,6 +8,11 @@ layout: default
       which is one of the inspirations for this web site.
     </h2>
   </div>
+  <div class="plaintext">
+    <p>
+      <a href="http://www.ohchr.org/EN/NewsEvents/Pages/DisplayNews.aspx?NewsID=21689&LangID=E">source: United Nations Human Rights - Office of the High Commissioner</a>
+    </p>
+  </div>
   <div class="box600">
     <h1>World needs “revolution” in mental health care – UN rights expert</h1>
 
@@ -83,8 +88,5 @@ layout: default
       </p>
     </div>
   </div>
-  <p class="plaintext">
-    <a href="http://www.ohchr.org/EN/NewsEvents/Pages/DisplayNews.aspx?NewsID=21689&LangID=E">source: United Nations Human Rights - Office of the High Commissioner</a>
-  </p>
 </div>
 <p></p>
