--- a/jekyll/_layouts/default.html
+++ b/jekyll/_layouts/default.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
-
   {% include head.html %}
-
   <body>
-
     {% include header.html %}
-
     <main class="page-content" aria-label="Content">
       <div class="wrapper">
+        <table style="width: 100%; margin-left: auto; margin-right: auto;">
+          <tr>
+            <td style="width: 80%; vertical-align: text-top;">
         {{ content }}
+            </td>
+            <td style="background-color: yellow; vertical-align: text-top;">
+              <p>test</p>
+            </td>
+          </tr>
+        </table>
       </div>
     </main>
-
     {% include footer.html %}
-
   </body>
-
 </html>
