Initial implementation simple-jekyll-search.js (#85)
* initial implementation simple-jekyll-search.js
* add comment around script for w3 style for script
* implement boostrap dropdown for search results

--- a/jekyll/_includes/footer.html
+++ b/jekyll/_includes/footer.html
@@ -33,6 +33,24 @@
         </table>
   </div>
 
+  <script src="{{ site.baseurl }}/assets/js/simple-jekyll-search.js" type="text/javascript"></script>
+  
+  
+  <script type="text/javascript">
+    <!--
+    window.simpleJekyllSearch = new SimpleJekyllSearch({
+      searchInput: document.getElementById('search-input'),
+      resultsContainer: document.getElementById('results-container'),
+      json: '{{ site.baseurl }}/search.json',
+      searchResultTemplate: '<li><a href="{url}" title="{desc}">{title}</a></li>',
+      noResultsText: 'No results found',
+      limit: 10,
+      fuzzy: false,
+      exclude: ['Welcome']
+    }) 
+    //-->
+  </script>
+
   <!-- jQuery CDN -->
   <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
   <!-- jQuery local fallback -->
@@ -50,4 +68,5 @@
       }
     });
   </script>
+  <script src="{{ site.url }}/assets/js/mhwkb-scripts.js"></script>
 </footer>
