--- a/jekyll/_includes/head.html
+++ b/jekyll/_includes/head.html
@@ -19,4 +19,11 @@
     <link rel="stylesheet" href="{{ site.url }}/assets/css/font-awesome.min.css">
     <!-- style.css reference   -->
     <link rel="stylesheet" href="{{ site.url }}/assets/css/style.css">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#f3f3f3">
+    <meta name="theme-color" content="#f3f3f3">
 </head>
