Resolves issue #82, changes body color to match background image, adds xcode mac install instructions, contributors file

--- a/jekyll/assets/css/style.css
+++ b/jekyll/assets/css/style.css
@@ -79,7 +79,7 @@ table, input, textarea, select {
 	Main Background
 *********************************************/
 body {
-	background: #FFFFFF;
+	background: #f3f3f3;
 	background-image: url("/images/mhwkb_bg_96x96_03.gif");
 }
 
