--- a/jekyll/_includes/footer.html
+++ b/jekyll/_includes/footer.html
@@ -34,8 +34,8 @@
   </div>
 
   <script src="{{ site.baseurl }}/assets/js/simple-jekyll-search.js" type="text/javascript"></script>
-  
-  
+
+
   <script type="text/javascript">
     <!--
     window.simpleJekyllSearch = new SimpleJekyllSearch({
@@ -43,11 +43,11 @@
       resultsContainer: document.getElementById('results-container'),
       json: '{{ site.baseurl }}/search.json',
       searchResultTemplate: '<li><a href="{url}" title="{desc}">{title}</a></li>',
-      noResultsText: 'No results found',
+      noResultsText: '<li class="no-results-text">No results found</li>',
       limit: 10,
       fuzzy: false,
       exclude: ['Welcome']
-    }) 
+    })
     //-->
   </script>
 
