--- a/jekyll/_layouts/autopage_tags.html
+++ b/jekyll/_layouts/autopage_tags.html
@@ -6,19 +6,15 @@ layout: default
   ul.pager { text-align: center; list-style: none; }
   ul.pager li {display: inline;border: 1px solid black; padding: 10px; margin: 5px;}
 </style>
-
 <div class="home">
-
   <h1 class="page-heading">AutoPage for Tag <b>{% if page.autopages %}{{page.autopages.display_name}}{% endif %}</b> Page {{page.pagination_info.curr_page}} of {{page.pagination_info.total_pages}}</h1>
-  
   This page is automagically created and paginated for each tag available in the posts on this site
-
   {{ content | markdownify }}
-
   <ul class="post-list">
-    <!-- 
+
+    <!--
         Here is the main paginator logic called.
-        All calls to site.posts should be replaced by paginator.posts 
+        All calls to site.posts should be replaced by paginator.posts
     -->
     {% for post in paginator.posts %}
       <li>
@@ -29,25 +25,23 @@ layout: default
       </li>
     {% endfor %}
   </ul>
-  
-  <!-- 
+
+  <!--
     Showing buttons to move to the next and to the previous list of posts (pager buttons).
   -->
   {% if paginator.total_pages > 1 %}
   <ul class="pager">
-      {% if paginator.previous_page %}
-      <li class="previous">
-          <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">&larr; Newer Posts</a>
-      </li>
-      {% endif %}
-      {% if paginator.next_page %}
-      <li class="next">
-          <a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">Older Posts &rarr;</a>
-      </li>
-      {% endif %}
+    {% if paginator.previous_page %}
+    <li class="previous">
+      <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">&larr; Newer Posts</a>
+    </li>
+    {% endif %}
+    {% if paginator.next_page %}
+    <li class="next">
+      <a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">Older Posts &rarr;</a>
+    </li>
+    {% endif %}
   </ul>
   {% endif %}
-
-  <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
-
+  <p class="rss-subscribe">subscribe <a href="/feed.xml">via RSS</a></p>
 </div>
