footer.html:add permalinks

--- a/jekyll/_includes/footer.html
+++ b/jekyll/_includes/footer.html
@@ -23,10 +23,19 @@
             </div>
           </div>
         </td>
-        <td style="width: 65%; vertical-align: text-top;">
-        <div class="row">
-          <h3 style="color: #dbcd5b; background-color: black; padding: 6px">&nbsp;</h3>
-        </div>
+        <td style="width: 30%; vertical-align: text-top;">
+          <div class="row">
+            <h3 style="color: #dbcd5b; background-color: black; padding: 6px">&nbsp;</h3>
+          </div>
+        </td>
+        <td style="width: 35%; vertical-align: text-top;">
+          <div class="row">
+            <h3 style="color: #dbcd5b; background-color: black; padding: 6px">Permalinks</h3>
+            <ul class="list-unstyled clear-margins linklist">
+              <li><a href="https://psychcentral.com/"><span class="glyphicon glyphicon-link"></span> Psych Central</a></li>
+              <li><a href="https://www.fda.gov/Safety/MedWatch/"><span class="glyphicon glyphicon-link"></span> FDA MedWatch</a></li>
+            </ul>
+          </div>
         </td>
       </tr>
     </table>
