--- a/jekyll/_includes/header.html
+++ b/jekyll/_includes/header.html
@@ -15,6 +15,10 @@
         </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
+          <li>
+              <div class="bfh-selectbox bfh-languages" data-language="en_US" data-available="en_US,fr_CA,es_MX" data-flags="true">
+                </div>
+          </li>
           <li><a href="{{ site.url }}"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home</a></li>
           <li><a href="https://github.com/mhwkb/mhwkb.github.io#mhwkb"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> About</a></li>
           <li><a href="{{ site.url }}/feed.xml"><i class="fa fa-rss"></i> RSS</a></li>
