add initial boostrap language selector

--- a/jekyll/_includes/footer.html
+++ b/jekyll/_includes/footer.html
@@ -79,4 +79,5 @@
     });
   </script>
   <script src="{{ site.url }}/assets/js/mhwkb-scripts.js"></script>
+  <script src="{{ site.url }}/assets/js/bootstrap-formhelpers.js"></script>
 </footer>
