footer.html:add OSMI

--- a/jekyll/_includes/footer.html
+++ b/jekyll/_includes/footer.html
@@ -34,6 +34,7 @@
             <ul class="list-unstyled clear-margins linklist">
               <li><a href="https://psychcentral.com/"><span class="glyphicon glyphicon-link"></span> Psych Central</a></li>
               <li><a href="https://www.fda.gov/Safety/MedWatch/"><span class="glyphicon glyphicon-link"></span> FDA MedWatch</a></li>
+              <li><a href="https://osmihelp.org/"><span class="glyphicon glyphicon-link"></span> Open Sourcing Mental Illness</a></li>
             </ul>
           </div>
         </td>
