--- a/jekyll/_includes/footer.html
+++ b/jekyll/_includes/footer.html
@@ -40,6 +40,7 @@
         </td>
       </tr>
     </table>
+    <p>This site was last updated on {{ site.time }}</p>
   </div>
   <script src="{{ site.baseurl }}/assets/js/simple-jekyll-search.js" type="text/javascript"></script>
   <script type="text/javascript">
