--- a/jekyll/_layouts/category_index.html
+++ b/jekyll/_layouts/category_index.html
@@ -7,7 +7,23 @@ layout: default
       <input type="text" id="search-input" placeholder="search..." onkeyup="checkSearchValAndDropdown();">
       <ul id="results-container" class="dropdown-menu"></ul>
     </div>
-    <p></p>
+    {% if paginator.page_trail %}
+    <nav aria-label="...">
+      <ul class="pagination">
+        <li {% if page.url == paginator.first_page_path %}class="page-item disabled"{% else %}class="page-item"{% endif %}>
+          <a class="page-link" href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' | replace: 'index.html', '' }}">Previous</a>
+        </li>
+        {% for trail in paginator.page_trail %}
+        <li {% if page.url == trail.path %}class="page-item active"{% else %}class="page-item"{% endif %}>
+          <a class="page-link" href="{{ trail.path | prepend: site.baseurl | replace: '//', '/' | replace: 'index.html', '' }}" title="{{trail.title}}">{{ trail.num }}</a>
+        </li>
+        {% endfor %}
+        <li {% if page.url == paginator.last_page_path %}class="page-item disabled"{% else %}class="page-item"{% endif %}class="page-item">
+          <a class="page-link" href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' | replace: 'index.html', '' }}">Next</a>
+        </li>
+      </ul>
+    </nav>
+    {% endif %}
     {% for post in paginator.posts %}
         {% include post_display.html %}
     {% endfor %}
