--- a/jekyll/assets/css/style.css
+++ b/jekyll/assets/css/style.css
@@ -230,3 +230,20 @@ h1 img, h2 img, h3 img, h4 img, h5 img, h6 img {
   color: #333;
   white-space: normal;
 }
+
+.panel {
+	background: #f3f3f3;
+	color: #000000;
+	text-align: left;
+	border: 0;
+	border-left: 4px solid #4040bf;
+	padding: 1em 1em 1em 2em;
+}
+
+.panel-title {
+	font-size: 1.5em;
+}
+
+.panel .btn {
+	margin-top: 1em;
+}
