Issue 76 move styles (Closes #76) (#101)
* fix jquery local url in footer

* move styling to style.css classes

--- a/jekyll/_includes/header.html
+++ b/jekyll/_includes/header.html
@@ -9,7 +9,7 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="{{ site.url }}">
-            <img alt="Brand" width="20" height="20" src="{{ site.url }}/images/mhwkb_dharma_wheel_logo_180x170.png">
+            <img alt="Brand" class="brand-img" src="{{ site.url }}/images/mhwkb_dharma_wheel_logo_180x170.png">
           </a>
           <a class="navbar-brand" href="{{ site.url }}">Mental Health Knowledge Base</a>
         </div>
