--- a/jekyll/assets/css/style.css
+++ b/jekyll/assets/css/style.css
@@ -247,3 +247,36 @@ h1 img, h2 img, h3 img, h4 img, h5 img, h6 img {
 .panel .btn {
 	margin-top: 1em;
 }
+
+.brand-img {
+  width: 1.25rem;
+  height: 1.25rem;
+}
+
+.footer-tbl {
+  width: 100%;
+  margin-left: 
+  auto; 
+  margin-right: auto;
+}
+
+.footer-heading {
+  color: #dbcd5b;
+  background-color: black;
+  padding: 6px
+}
+
+.footer-left-col {
+  width: 35%;
+  vertical-align: text-top;
+}
+
+.footer-center-col {
+  width: 30%;
+  vertical-align: text-top;
+}
+
+.footer-right-col {
+  width: 35%;
+  vertical-align: text-top;
+}
