--- a/jekyll/_includes/footer.html
+++ b/jekyll/_includes/footer.html
@@ -43,6 +43,7 @@
     {% if page.title == "home" %}
       <p>This site was last updated on {{ site.time }}</p>
     {% endif %}
+    <script src="//rss.bloople.net/?url=https%3A%2F%2Fpsychcentral.com%2Fnews%2Ffeed&limit=5&showtitle=false&type=js"></script>
   </div>
   <script src="{{ site.baseurl }}/assets/js/simple-jekyll-search.js" type="text/javascript"></script>
   <script type="text/javascript">
