--- a/jekyll/_includes/footer.html
+++ b/jekyll/_includes/footer.html
@@ -1,5 +1,9 @@
 <footer class="site-footer">
   <div class="container">
+    <h2>Psych Central Blog Network - Recent Headlines</h2>
+    <script src="//rss.bloople.net/?url=https%3A%2F%2Fpsychcentral.com%2Fallblogs%2Ffeed%2F&limit=5&showtitle=false&type=js"></script>
+    <h2>Alternative Mental Health - Recent Headlines</h2>
+    <script src="//rss.bloople.net/?url=https%3A%2F%2Fwww.alternativementalhealth.com%2Ffeed%2F&limit=5&showtitle=false&type=js"></script>
     <div class="text-center">
       <a class="btn btn-custom" href="{{ site.url }}"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home</a>
       <a class="btn btn-custom" href="https://github.com/mhwkb/mhwkb.github.io#mhwkb"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> About</a>
@@ -32,7 +36,6 @@
           <div class="row">
             <h3  class="footer-heading">Permalinks</h3>
             <ul class="list-unstyled clear-margins linklist">
-              <li><a href="https://psychcentral.com/"><span class="glyphicon glyphicon-link"></span> Psych Central</a></li>
               <li><a href="https://www.fda.gov/Safety/MedWatch/"><span class="glyphicon glyphicon-link"></span> FDA MedWatch</a></li>
               <li><a href="https://osmihelp.org/"><span class="glyphicon glyphicon-link"></span> Open Sourcing Mental Illness</a></li>
             </ul>
@@ -40,10 +43,6 @@
         </td>
       </tr>
     </table>
-    {% if page.title == "home" %}
-      <p>This site was last updated on {{ site.time }}</p>
-    {% endif %}
-    <script src="//rss.bloople.net/?url=https%3A%2F%2Fpsychcentral.com%2Fnews%2Ffeed&limit=5&showtitle=false&type=js"></script>
   </div>
   <script src="{{ site.baseurl }}/assets/js/simple-jekyll-search.js" type="text/javascript"></script>
   <script type="text/javascript">
