--- a/jekyll/_layouts/tag.html
+++ b/jekyll/_layouts/tag.html
@@ -4,6 +4,7 @@ layout: default
 <h2 align="center">post tags: {{ page.tag }}</h2>
 <div class="container">
   <div class="text-center">
+    {% include search_box.html %}
     {% for post in site.tags[page.tag] %}
         {% include post_display.html %}
     {% endfor %}
