header.html: add link to tag cloud [#50]

--- a/jekyll/_includes/header.html
+++ b/jekyll/_includes/header.html
@@ -15,6 +15,7 @@
         </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
+          <li><a href="{{ site.url }}/tag_cloud/"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> Tag cloud</a></li>
           <li><a href="{{ site.url }}"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home</a></li>
           <li><a href="https://github.com/mhwkb/mhwkb.github.io#mhwkb"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> About</a></li>
           <li><a href="{{ site.url }}/feed.xml"><i class="fa fa-rss"></i> RSS</a></li>
