add ne_NP and pt_BR to nav dropdown
These categories were added after #94 and #102 were submitted

--- a/jekyll/_includes/category_display.html
+++ b/jekyll/_includes/category_display.html
@@ -1,3 +1,4 @@
+<!-- disabled after nav dropdown: https://github.com/mhwkb/mhwkb.github.io/pull/102
 <div class="text-center">
   <h2>
   {% assign categories_list = site.categories %}
@@ -13,3 +14,4 @@
   {% assign categories_list = nil %}
   </h2>
 </div>
+-->
