--- a/jekyll/_includes/header.html
+++ b/jekyll/_includes/header.html
@@ -16,8 +16,8 @@
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
           <li>
-              <div class="navbar-btn bfh-selectbox bfh-languages" data-language="en_US" 
-                data-available="en_US,de_DE,hi_IN,nl_NL,sv_SE" data-flags="true" data-blank="false">
+              <div class="navbar-btn bfh-selectbox bfh-languages" data-language="de_DE"
+                data-available="de_DE,en_US,hi_IN,ne_NP,nl_NL,pt_BR,sv_SE" data-flags="true" data-blank="false">
               </div>
           </li>
           <li><a href="{{ site.url }}/tag_cloud/"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> Tag cloud</a></li>
