--- a/jekyll/_includes/post_display.html
+++ b/jekyll/_includes/post_display.html
@@ -4,7 +4,7 @@
 	</div>
 	<div>
 		{% for tag in post.tags %}
-		<a class="btn btn-primary" href="{{ site.url }}/{{ site.tag_page_dir }}/{{ tag | slugify: 'pretty' }}/">{{ tag }}</a>
+		<a class="btn btn-primary" href="{{ site.url }}/{{ site.tag_page_dir }}/{{ tag | downcase }}/">{{ tag }}</a>
 		{% endfor %}
 	</div>
 </div>
