--- a/jekyll/_layouts/autopage_tags.html
+++ b/jekyll/_layouts/autopage_tags.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<h2 align="center">TEST post tags: {{ page.tag }}</h2>
+<h2 align="center">post tags: {% if page.autopages %}{{page.autopages.display_name}}{% endif %}</h2>
 <div class="container">
   <div class="text-center">
     {% include search_box.html %}
