update tag layout for pagination trail

--- a/jekyll/_layouts/autopage_tags.html
+++ b/jekyll/_layouts/autopage_tags.html
@@ -5,8 +5,10 @@ layout: default
 <div class="container">
   <div class="text-center">
     {% include search_box.html %}
+    {% include pagination_trail.html %}
     {% for post in paginator.posts %}
         {% include post_display.html %}
     {% endfor %}
+    {% include pagination_trail.html %}
   </div>
 </div>
