add a lang-id attribute to post panel for parsing in JS

--- a/jekyll/_includes/post_display.html
+++ b/jekyll/_includes/post_display.html
@@ -1,4 +1,4 @@
-<div class="panel">
+<div class="panel" lang-id="{{ post.categories[0] }}">
 	<div>
 		<a class="panel-title" href="{{ post.href }}">{{ post.title }}</a>
 	</div>
